2015-12-16  Andy Buckley  <andy.buckley@cern.ch>

	* Fixes to the lhapdf script. Thanks again to Dmitry Kalinkin for
	a patch.

	* Add missing getlam4 and getlam5 functions to Fortran
	interface. Thanks to Dmitry Kalinkin for the patch.

	* Update Cython and Python interfaces to support Python3
	syntax. Thanks to Vitaly Yermolchyk for the patches!

	* Update to even newer boost.m4

2015-12-03  Andy Buckley  <andy.buckley@cern.ch>

	* Don't append the install prefix to path searches if
	$LHAPDF_DATA_PATH ends with a double-colon, ::.

	* De-inline the availablePDFSets() function, and veto duplicate
	set names.

2015-09-23  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Determine number of parameter variation members by counting
	number of "+" signs in ErrorType, e.g. "replicas+as+mc+mb+mt".

	* Added a new checkPdfType() member function to PDFSet class.

2015-07-17  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Added support for combined PDF+alphaS sets via new ErrorType
	values, i.e. "replicas+as", "hessian+as" and "symmhessian+as".

2015-04-10  Andy Buckley  <andy.buckley@cern.ch>

	* Updating AUTHORS notice to final EPJC paper reference, and
	adding a final citation reminder message via the Config
	destructor.

2015-03-20  Andy Buckley  <andy.buckley@cern.ch>

	* src/Factories.cc: Adding a set of expandPDFsStr(), decodePDFStr
	and decodePDFsStr functions to be used for handling more general
	PDF strings of the sort that will be used in the CompositePDF
	factory system.

	* Adding a default constructor and knotarrays() accessor to
	GridPDF, as requested by Nathan Hartland.

2015-01-09  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Remove abs(...) twice in function PDFSet::randomValueFromHessian
	to correct a mistake in Eq. (6.5) of arXiv:1205.4024v2.  The
	correction is necessary to ensure that correlations are preserved
	when converting a Hessian PDF set to a Monte Carlo PDF set.

2014-12-23  Andy Buckley  <andy.buckley@cern.ch>

	* 6.1.5 release.
